Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Core ReactOS
CORE-13498
can't start "pnfs" service
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
Trivial
Fix Version/s:
0.4.12
Component/s:
Drivers: Other
,
Services
Labels:
None
Description
can't start "pnfs" service
progress bar goes to its end but service not started
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
nfs41_driver.sys
2017-07-26 10:16
528 kB
Pierre Schweitzer
nfsd_getnameinfo.diff
2018-05-19 11:55
1.0 kB
Pierre Schweitzer
0.4.12-RC-2-gf57e9ed__ok.webm
2019-04-09 21:57
356 kB
reactosfanboy
Activity
People
Assignee:
reactosfanboy
Reporter:
Kyle_Katarn
Votes:
0
Vote for this issue
Watchers:
4
Start watching this issue
Dates
Created:
2017-06-28 19:38
Updated:
2025-08-10 16:49
Resolved:
2019-04-09 21:59