[0.4.9] [NFSD] Apply a hack to avoid CORE-13498

Committing into rls was requested by Pierre.
The hack allows to startup nfsd even when getnameinfo() fails.